@@ -27,10 +27,6 @@ TECH
 NON-TECH
    *. Test and Fix all those damn new skills.
 		New Ranger skills: 
-			Repel Vermin (chant), 
-			Delay Poison, 
-			Sense Snares and Pits, 
-			Set Snare, 
 			Air Wall
 		More Ranger skills: 
 			Speak with Animals, 
