@@ -82,7 +82,6 @@ Short(s): \n\r\
 A command that allows one to issue other commands elsewhere in the \
 mud.
 
-
 BAN=\
 Command : BAN\n\r\
 Usage   : BAN [PLAYER TYPE/IP ADDRESS]\n\r\
@@ -1287,6 +1286,7 @@ Example : stat questwins bob\n\r\
 Example : stat tattoos bob\n\r\
 Example : stat titles bob\n\r\
 Example : stat scripts bob\n\r\
+Example : stat charstats bob\n\r\
 Example : stat roomsexplored bob\n\r\
 Example : stat factions bob\n\r\
 Example : stat spell bob\n\r\
@@ -1308,7 +1308,7 @@ SPELL, PRAYER, SONG, TRAP, PROPERTY, "THIEF SKILL", LANGUAGE, CHANT, \
 "COMMON SKILL", DISEASE, POISON.  You can also get special reports by \
 entering one of the following before the name: EQUIPMENT, COMBAT, INVENTORY, \
 QUESTWINS, TATTOOS, TITLES, SCRIPTS, WORLDEXPLORED, AREASEXPLORED, ROOMSEXPLORED, \
-FACTIONS
+FACTIONS, and CHARSTATS
 
 
 SAVE=\
