@@ -270,9 +270,11 @@ Short(s): \n\r\
 This command allows the player to manage their auto-invoking skills. These are \
 skills, like Dodge or Healing Aura, which, once learned or gained, are automatically \
 activated for the player for an indefinite duration.  This command will allow \
-the player to deactivate or reinvoke these skills.
+the player to deactivate or reinvoke these skills.\n\r\
+The name of the skill to modify may optionally be modified with a starting or ending \
+asterisk (*) to match multiple skills, and may be preceded by the word INVOKE or \
+UNINVOKE to specify an action other than toggle.
 
-	
 AUTOMELEE=\
 Command : AUTOMELEE\n\r\
 Usage   : AUTOMELEE\n\r\
